fixed gap between cards

--- a/frontend/carveoUI/src/Components/dashboard/Dashboard.css
+++ b/frontend/carveoUI/src/Components/dashboard/Dashboard.css
@@ -13,9 +13,9 @@ h1 {
 
 .dashboard-cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 60px;
 }
 
 .card {
